Fix timeline padding on mobile and caption font size

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -112,8 +112,4 @@
   .step-title {
     @apply py-2 mt-1 text-2xl font-bold font-handwriting text-gray-900 sm:text-2xl sm:tracking-tight lg:text-4xl;
   }
-
-  .tinybox__content__image__caption {
-    font-size: 0.8rem !important;
-  }
 }
